# marketpulse-damm-ehub

./: .env.example  .gitignore  AGENT.md  CHALLENGE.md  DATA.md  DECISIONS.md  DEMO.md  FRONTEND.md  ML.md  MODEL.md  Makefile  PAGES.md  PLAN.md  README.md  STACK.md  app.yaml  databricks_app.py  marketpulse_run_training.ipynb  marketpulse_run_training.py  package.json  requirements.txt  start_databricks.sh
backend/: pyproject.toml
backend/app/: main.py  paths.py
backend/app/routers/: aggregates.py  brief.py  debug_data.py  drivers.py  explain_view.py  external.py  forecast.py  gap.py  kpis.py  meta.py  pricing.py  promos.py  recommend.py  simulate.py
backend/app/schemas/: __init__.py  aggregates.py  external.py  forecast.py  gap.py  pricing.py  promos.py  simulate.py
backend/app/services/: calendar.py  databricks_volume.py  etl.py  external.py  news.py  plays.py  pricing.py  promo_windows.py  seasonality.py  weekly_split.py
backend/app/services/forecast/: anomaly.py  autoarima.py  calibrate.py  causal.py  cmbc.py  cv.py  ensemble.py  explain.py  features.py  reconcile.py  simulate.py  spike.py  train_lgb.py  zeroshot.py
frontend-legacy/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend-legacy/src/: App.tsx  index.css
frontend-legacy/src/components/: AppShell.tsx  ErrorBoundary.tsx  KpiRow.tsx  StickyFilterBar.tsx
frontend-legacy/src/lib/: api.gen.ts  api.ts  format.ts  hooks.ts  plot.ts
frontend/src/: App.tsx  ParquetDiagnostics.tsx
web/: next.config.ts  package.json  pnpm-lock.yaml
web/src/app/: globals.css  (+2 more)
(+77 files in other folders)
