[project]
name = "marketpulse-backend"
version = "0.1.0"
description = "MarketPulse UK — Damm × Engineering Hub hackathon backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    "category-encoders>=2.9.0",
    "chronos-forecasting>=2.2.2",
    "duckdb>=1.5.3",
    "fastapi>=0.136.1",
    "fastexcel>=0.20.2",
    "hierarchicalforecast>=1.5.1",
    "holidays>=0.97",
    "httpx>=0.28.1",
    "huggingface-hub>=0.34,<1.0",
    "instructor>=1.15.1",
    "lightgbm>=4.6.0",
    "mlforecast>=1.0.31",
    "numpy>=1.26.4,<2",
    "openpyxl>=3.1.5",
    "pandera>=0.31.1",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
    "pydantic[email]>=2.13.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "pytrends>=4.9.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shap>=0.51.0",
    "smolagents>=1.25.0",
    "sse-starlette>=3.4.4",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.6",
    "tavily-python>=0.7.24",
    "utilsforecast>=0.2.16",
    "uvicorn[standard]>=0.47.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
